--- a/PlanetWallet/Resources/ko.lproj/Localizable.strings
+++ b/PlanetWallet/Resources/ko.lproj/Localizable.strings
@@ -140,5 +140,11 @@
 "tx_list_header_btn_transfer_title" = "전송";
 "security_bio_permission_never_not_allowed_title" = "TouchID/FaceID을 위해 설정에서 권한을 허용해주세요.";
 "security_bio_not_registered_fingerprint" = "디바이스에 등록된 TouchID/FaceID가 없습니다.";
-
 "tx_receipt_shared_text" = "%@에서 %@ %@를 송금하였습니다.\n\n아래 링크를 눌러 내역을 확인하세요.\n\n%@";
+"service_wallet_title" = "월렛";
+"service_planet_title" = "플래닛";
+"service_universe_title" = "유니버스";
+"service_security_title" = "보안";
+"service_transfer_title" = "거래";
+"service_contact_us_title" = "Contact us";
+"splash_force_update" = "Appstore에서 업데이트를 해주세요.";
