fix import, main issue

--- a/PlanetWallet/Resources/en.lproj/Localizable.strings
+++ b/PlanetWallet/Resources/en.lproj/Localizable.strings
@@ -98,7 +98,7 @@
 "setting_universe_title" = "Universe";
 "setting_security_title" = "Security";
 "setting_announcements_title" = "Notifications";
-"setting_faq_title" = "FAQ";
+"setting_faq_title" = "FAQ & Enquiry";
 "setting_language_title" = "Language";
 "setting_currency_title" = "Currency";
 "setting_theme_setting_title" = "Theme Setting";
